# Tsetlini

./: .buildinfo  .gitignore  .travis.yml  CMakeLists.txt  FUNDING.yml  LICENSE  README.md  c++.sh  genindex.html  index.html  literature.html  objects.inv  reference_examples.html  search.html  searchindex.js
.build/: README.md
.github/: funding.yml
_sources/: index.rst.txt  literature.rst.txt  reference_examples.rst.txt
cmake/: FindTkTsetlin.cmake  FindTsetlini.cmake  GoogleBenchmark-CMakeLists.txt.in  GoogleTest-CMakeLists.txt.in
docs/: conf.py  entrypoint.sh  index.rst  literature.rst  reference_examples.rst  requirements.txt
examples/: CMakeLists.txt
examples/binary-iris/: CMakeLists.txt
examples/binary-iris/src/: main.cpp
examples/mnist-digits/: CMakeLists.txt  README.txt
examples/mnist-digits/src/: digits_3.txt  digits_4.txt  digits_5.txt  main.cpp  make_data.py
examples/noisy-xor/: CMakeLists.txt
examples/noisy-xor/src/: main.cpp
include/: basic_numeric_matrix.hpp  frand_cache.hpp  mt.hpp  tsetlin.hpp  tsetlin_classifier_state_maker.hpp  tsetlin_config.hpp  tsetlin_params.hpp  tsetlin_state.hpp  tsetlin_state_json.hpp  tsetlin_status_code.hpp  tsetlin_types.hpp  tsetlini_types.hpp
internals/: implementation.html
lib/: CMakeLists.txt
lib/examples/: CMakeLists.txt
lib/examples/binary-iris/: CMakeLists.txt
lib/examples/binary-iris/src/: CAIR_The_Binary_Iris_Dataset.ipynb  The_Binary_Iris_Dataset.ipynb  main.cpp  output.txt  reference.txt
lib/examples/breast-cancer/: CMakeLists.txt
lib/examples/breast-cancer/src/: README.txt  main.cpp  produce_dataset.py
lib/examples/california-housing/: CMakeLists.txt
lib/examples/california-housing/src/: README.rst  README.txt  main-bitwise.cpp  main.cpp  produce_dataset.py  produce_dataset_alt.py
lib/examples/imdb-text-categorization/: CMakeLists.txt
lib/examples/imdb-text-categorization/src/: README.txt  main-bitwise.cpp  main.cpp  produce_dataset.py
lib/examples/mnist-digits/: CMakeLists.txt
lib/examples/mnist-digits-2/: CMakeLists.txt
lib/examples/mnist-digits-2-new/: CMakeLists.txt
lib/examples/mnist-digits-2-new/src/: README.txt  main-bitwise-weighted.cpp  main-bitwise.cpp  main.cpp
lib/examples/mnist-digits-2/src/: main.cpp
lib/examples/mnist-digits-partial/: CMakeLists.txt
lib/examples/mnist-digits-partial/src/: main.cpp  make_data.py
lib/examples/mnist-digits/src/: digits_1.txt  digits_2.txt  main.cpp
lib/examples/noisy-xor/: CMakeLists.txt
lib/examples/noisy-xor/src/: main.cpp
lib/include/: aligned_allocator.hpp  aligned_array.hpp  arg_extract.hpp  assume_aligned.hpp  basic_bit_matrix.hpp  basic_bit_vector.hpp  basic_bit_vector_companion.hpp  basic_numeric_matrix.hpp  bit_matrix.hpp  coin_tosser.hpp  coin_tosser_exact.hpp  either.hpp  estimator_state.hpp  estimator_state_cache.hpp  estimator_state_fwd.hpp  frand_cache.hpp  is_power_of_two.hpp  is_subset_of.hpp  likely.h  mt.hpp  ta_state.hpp  tsetlini.hpp  tsetlini_params.hpp  tsetlini_state.hpp  tsetlini_state_json.hpp  tsetlini_status_code.hpp  tsetlini_strong_params.hpp  tsetlini_types.hpp
lib/include/neither/: COMMIT  either.hpp  maybe.hpp
lib/src/: box_muller.hpp  box_muller_approx.cpp  box_muller_approx.hpp  coin_tosser.hpp  coin_tosser_exact.hpp  estimator_state.cpp  estimator_state.hpp  estimator_state_cache.cpp  estimator_state_cache.hpp  frand_cache.hpp  logger.hpp  loss_fn.cpp  loss_fn.hpp  params_companion.hpp  ta_state.cpp  ta_state.hpp  tsetlini.cpp  tsetlini_algo.hpp  tsetlini_algo_bitwise.hpp  tsetlini_algo_classic.hpp  tsetlini_algo_common.hpp  tsetlini_classifier_state_private.hpp  tsetlini_estimator_state_private.hpp  tsetlini_params.cpp  tsetlini_private.hpp  tsetlini_state.cpp  tsetlini_state_json.cpp  tsetlini_strong_params.hpp  tsetlini_strong_params_private.hpp
lib/tests/: CMakeLists.txt
lib/tests/src/: cair_algos.hpp  test_algo_bitwise.cpp  test_algo_classic.cpp  test_aligned_array.cpp  test_bit_matrix.cpp  test_classifier.cpp  test_classifier_params.cpp  test_classifier_state_json.cpp  test_numeric_matrix.cpp  test_params.cpp  test_regressor.cpp  test_regressor_params.cpp  test_regressor_state_json.cpp
lib/utests/: CMakeLists.txt  main.cpp  suite_aligned_array.cpp  suite_aligned_array.hpp
lib/utests/include/boost/: version.txt
lib/utests/rapidcheck/: CMakeLists.txt
lib/utests/src/: test_aligned_array.cpp  test_arg_extract.cpp  test_bit_matrix.cpp  test_bitwise_train_classifier_automata.cpp  test_bitwise_train_regressor_automata.cpp  test_bytewise_train_classifier_automata.cpp  test_bytewise_train_regressor_automata.cpp  test_calculate_classifier_feedback_to_clauses.cpp  test_calculate_clause_output.cpp  test_classifier_bitwise.cpp  test_classifier_bitwise_decision_function.cpp  test_classifier_bitwise_fit.cpp  test_classifier_bitwise_partial_fit.cpp  test_classifier_bitwise_predict.cpp  test_classifier_classic.cpp  test_classifier_classic_decision_function.cpp  test_classifier_classic_fit.cpp  test_classifier_classic_partial_fit.cpp  test_classifier_classic_predict.cpp  test_classifier_params.cpp  test_classifier_params_from_json.cpp  test_classifier_state_json_serialization.cpp  test_numeric_matrix.cpp  test_regressor_bitwise.cpp  test_regressor_bitwise_fit.cpp  test_regressor_bitwise_partial_fit.cpp  test_regressor_bitwise_predict.cpp  test_regressor_classic.cpp  test_regressor_classic_fit.cpp  test_regressor_classic_partial_fit.cpp  test_regressor_classic_predict.cpp  test_regressor_params.cpp  test_regressor_state_json_serialization.cpp  test_sum_up_all_label_votes.cpp  test_sum_up_regressor_votes.cpp  test_train_classifier_automata.cpp
src/: aligned_array.hpp  assume_aligned.hpp  c_api.cpp  config_companion.hpp  likely.h  logger.hpp  mt.hpp  numeric_matrix.hpp  params_companion.hpp  tsetlin.cpp  tsetlin_algo.hpp  tsetlin_classifier_state_maker.cpp  tsetlin_classifier_state_private.hpp  (+9 more)
tests/: CMakeLists.txt
tests/src/: test_bit_matrix.cpp  test_classifier.cpp  test_classifier_state_json.cpp  test_config.cpp  test_numeric_matrix.cpp  test_params.cpp  test_state.cpp
(+37 files in other folders)
