add_subdirectory(noisy-xor)
add_subdirectory(binary-iris)
add_subdirectory(imdb-text-categorization)
add_subdirectory(mnist-digits)
add_subdirectory(mnist-digits-2)
add_subdirectory(mnist-digits-2-new)
add_subdirectory(mnist-digits-partial)
add_subdirectory(breast-cancer)
add_subdirectory(california-housing)
