function(add_ut)
    set( options TEST_NAME )
    set( oneValueArgs EXE_NAME SOURCE )
    set( multiValueArgs "" )
    cmake_parse_arguments( parsed "${options}" "${oneValueArgs}" "${multiValueArgs}" ${ARGN} )

    if( parsed_UNPARSED_ARGUMENTS )
        message( FATAL_ERROR "[add_ut] Bad arguments: ${parsed_UNPARSED_ARGUMENTS}" )
    endif()

    if( NOT parsed_TEST_NAME )
        set( parsed_TEST_NAME ${parsed_EXE_NAME} )
    endif()

    add_executable( ${parsed_EXE_NAME} "src/dummy.cpp" )
    target_sources( ${parsed_EXE_NAME} PRIVATE ${parsed_SOURCE} )
    target_include_directories( ${parsed_EXE_NAME} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/include )
    target_link_libraries( ${parsed_EXE_NAME} tsetlini_static )
    add_test( ${parsed_TEST_NAME} ${parsed_EXE_NAME} )
endfunction()


add_ut( EXE_NAME test_aligned_array                         SOURCE "src/test_aligned_array.cpp" )
add_ut( EXE_NAME test_bit_matrix                            SOURCE "src/test_bit_matrix.cpp" )
add_ut( EXE_NAME test_numeric_matrix                        SOURCE "src/test_numeric_matrix.cpp" )

add_ut( EXE_NAME test_classifier_classic                    SOURCE "src/test_classifier_classic.cpp" )
add_ut( EXE_NAME test_classifier_classic_fit                SOURCE "src/test_classifier_classic_fit.cpp" )
add_ut( EXE_NAME test_classifier_classic_partial_fit        SOURCE "src/test_classifier_classic_partial_fit.cpp" )
add_ut( EXE_NAME test_classifier_classic_predict            SOURCE "src/test_classifier_classic_predict.cpp" )
add_ut( EXE_NAME test_classifier_classic_decision_function  SOURCE "src/test_classifier_classic_decision_function.cpp" )
add_ut( EXE_NAME test_classifier_bitwise                    SOURCE "src/test_classifier_bitwise.cpp" )
add_ut( EXE_NAME test_classifier_bitwise_fit                SOURCE "src/test_classifier_bitwise_fit.cpp" )
add_ut( EXE_NAME test_classifier_bitwise_partial_fit        SOURCE "src/test_classifier_bitwise_partial_fit.cpp" )
add_ut( EXE_NAME test_classifier_bitwise_predict            SOURCE "src/test_classifier_bitwise_predict.cpp" )
add_ut( EXE_NAME test_classifier_bitwise_decision_function  SOURCE "src/test_classifier_bitwise_decision_function.cpp" )
add_ut( EXE_NAME test_classifier_params                     SOURCE "src/test_classifier_params.cpp" )
add_ut( EXE_NAME test_classifier_state_json_serialization   SOURCE "src/test_classifier_state_json_serialization.cpp" )

add_ut( EXE_NAME test_regressor_params                      SOURCE "src/test_regressor_params.cpp" )
add_ut( EXE_NAME test_regressor_state_json_serialization    SOURCE "src/test_regressor_state_json_serialization.cpp" )
