add_subdirectory( rapidcheck )

function(add_ut)
    set( options TEST_NAME )
    set( oneValueArgs EXE_NAME SOURCE )
    set( multiValueArgs EXT_LIBS )
    cmake_parse_arguments( parsed "${options}" "${oneValueArgs}" "${multiValueArgs}" ${ARGN} )

    if( parsed_UNPARSED_ARGUMENTS )
        message( FATAL_ERROR "[add_ut] Bad arguments: ${parsed_UNPARSED_ARGUMENTS}" )
    endif()

    if( NOT parsed_TEST_NAME )
        set( parsed_TEST_NAME ${parsed_EXE_NAME} )
    endif()

    add_executable( ${parsed_EXE_NAME} "src/dummy.cpp" )
    target_sources( ${parsed_EXE_NAME} PRIVATE ${parsed_SOURCE} )
    target_include_directories( ${parsed_EXE_NAME} PRIVATE ${CMAKE_CURRENT_LIST_DIR}/include ${CMAKE_SOURCE_DIR}/lib/src )
    target_link_libraries( ${parsed_EXE_NAME} tsetlini_static ${OpenMP_CXX_FLAGS} ${parsed_EXT_LIBS} )
    target_compile_options( ${parsed_EXE_NAME} PRIVATE ${OpenMP_CXX_FLAGS} )
    add_test( ${parsed_TEST_NAME} ${parsed_EXE_NAME} )
endfunction()

# the most time consuming tests go first
add_ut( EXE_NAME test_bitwise_train_classifier_automata         SOURCE "src/test_bitwise_train_classifier_automata.cpp" EXT_LIBS rapidcheck )
add_ut( EXE_NAME test_bytewise_train_classifier_automata        SOURCE "src/test_bytewise_train_classifier_automata.cpp" EXT_LIBS rapidcheck )
add_ut( EXE_NAME test_bitwise_train_regressor_automata          SOURCE "src/test_bitwise_train_regressor_automata.cpp" EXT_LIBS rapidcheck )
add_ut( EXE_NAME test_bytewise_train_regressor_automata         SOURCE "src/test_bytewise_train_regressor_automata.cpp" EXT_LIBS rapidcheck )

add_ut( EXE_NAME test_calculate_clause_output                   SOURCE "src/test_calculate_clause_output.cpp" EXT_LIBS rapidcheck )
add_ut( EXE_NAME test_sum_up_all_label_votes                    SOURCE "src/test_sum_up_all_label_votes.cpp" EXT_LIBS rapidcheck )
add_ut( EXE_NAME test_sum_up_regressor_votes                    SOURCE "src/test_sum_up_regressor_votes.cpp" EXT_LIBS rapidcheck )
add_ut( EXE_NAME test_calculate_classifier_feedback_to_clauses  SOURCE "src/test_calculate_classifier_feedback_to_clauses.cpp" )


add_ut( EXE_NAME test_aligned_array                             SOURCE "src/test_aligned_array.cpp" )
add_ut( EXE_NAME test_bit_matrix                                SOURCE "src/test_bit_matrix.cpp" )
add_ut( EXE_NAME test_numeric_matrix                            SOURCE "src/test_numeric_matrix.cpp" )

add_ut( EXE_NAME test_classifier_classic                        SOURCE "src/test_classifier_classic.cpp" )
add_ut( EXE_NAME test_classifier_classic_fit                    SOURCE "src/test_classifier_classic_fit.cpp" )
add_ut( EXE_NAME test_classifier_classic_partial_fit            SOURCE "src/test_classifier_classic_partial_fit.cpp" )
add_ut( EXE_NAME test_classifier_classic_predict                SOURCE "src/test_classifier_classic_predict.cpp" )
add_ut( EXE_NAME test_classifier_classic_decision_function      SOURCE "src/test_classifier_classic_decision_function.cpp" )
add_ut( EXE_NAME test_classifier_bitwise                        SOURCE "src/test_classifier_bitwise.cpp" )
add_ut( EXE_NAME test_classifier_bitwise_fit                    SOURCE "src/test_classifier_bitwise_fit.cpp" )
add_ut( EXE_NAME test_classifier_bitwise_partial_fit            SOURCE "src/test_classifier_bitwise_partial_fit.cpp" )
add_ut( EXE_NAME test_classifier_bitwise_predict                SOURCE "src/test_classifier_bitwise_predict.cpp" )
add_ut( EXE_NAME test_classifier_bitwise_decision_function      SOURCE "src/test_classifier_bitwise_decision_function.cpp" )
add_ut( EXE_NAME test_classifier_params_from_json               SOURCE "src/test_classifier_params_from_json.cpp" )
add_ut( EXE_NAME test_classifier_state_json_serialization       SOURCE "src/test_classifier_state_json_serialization.cpp" )

add_ut( EXE_NAME test_regressor_classic                         SOURCE "src/test_regressor_classic.cpp" )
add_ut( EXE_NAME test_regressor_classic_fit                     SOURCE "src/test_regressor_classic_fit.cpp" )
add_ut( EXE_NAME test_regressor_classic_partial_fit             SOURCE "src/test_regressor_classic_partial_fit.cpp" )
add_ut( EXE_NAME test_regressor_classic_predict                 SOURCE "src/test_regressor_classic_predict.cpp" )
add_ut( EXE_NAME test_regressor_bitwise                         SOURCE "src/test_regressor_bitwise.cpp" )
add_ut( EXE_NAME test_regressor_bitwise_fit                     SOURCE "src/test_regressor_bitwise_fit.cpp" )
add_ut( EXE_NAME test_regressor_bitwise_partial_fit             SOURCE "src/test_regressor_bitwise_partial_fit.cpp" )
add_ut( EXE_NAME test_regressor_bitwise_predict                 SOURCE "src/test_regressor_bitwise_predict.cpp" )
add_ut( EXE_NAME test_regressor_params_from_json                SOURCE "src/test_regressor_params_from_json.cpp" )
add_ut( EXE_NAME test_regressor_state_json_serialization        SOURCE "src/test_regressor_state_json_serialization.cpp" )

add_ut( EXE_NAME test_arg_extract                               SOURCE "src/test_arg_extract.cpp" )
